--- a/styles/PostsPanel.module.scss
+++ b/styles/PostsPanel.module.scss
@@ -42,6 +42,7 @@
         text-align: center;
         cursor: pointer;
         padding: 20px 8px;
+        margin: 16px 0px 8px 4px;
         font-weight: bold;
         color: gray;
         transition: .2s;
@@ -85,6 +86,7 @@
     background: hsl(0, 0%, 10%);
     border-radius: 30px;
     padding: 12px;
+    gap: 12px;
     margin: 12px 0px;
     box-shadow: 0px 0px 15px 5px black;
 }
@@ -114,7 +116,7 @@
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     width: 100%;
-    padding: 12px;
+    // padding: 12px;
     gap: 4px;
     align-items: center;
 
@@ -128,6 +130,17 @@
         }
         &.left {
             margin-right: auto;
+        }
+        
+        &.center {
+            .button {
+                cursor: pointer;
+                padding: 8px;
+
+                &:hover {
+                    background-color: hsl(0, 0%, 25%);
+                }
+            }
         }
     }
 
@@ -200,13 +213,16 @@ $edge-top: 64px;
 
 
 .post-header {
-    width: 100%;
-    height: $edge-top;
-    padding-left: $edge-width;
-    position: absolute;
-    top: 0;
+    // width: 100%;
+    // height: $edge-top;
+    // padding-left: $edge-width;
+    // position: absolute;
+    // top: 0;
+    // position: sticky;
+    // top: 0;
     display: flex;
-    gap: 20px;
+    flex-direction: column;
+    // gap: 20px;
     justify-content: flex-start;
     align-items: center;
     // background: linear-gradient(to bottom, black, transparent);
@@ -215,15 +231,20 @@ $edge-top: 64px;
     // opacity: 0;
     transition: .3s;
     
-    // h3 {
-    //     font-weight: bold;
-    // }
-
+    
     @at-root .Post.shown & {
         opacity: 1;
     }
 }
 
+.title {
+    position: sticky;
+    top: 0;
+    background: hsl(0, 0%, 15%);
+    margin: 0;
+    padding: 18px 0px;
+    box-shadow: 0px 0px 10px hsl(0, 0%, 15%);
+}
 
 // .post-image {
 //     max-width: 100%;
@@ -384,7 +405,7 @@ $edge-top: 64px;
 
 .Post {
     // padding: $edge-width;
-    padding-top: $edge-top;
+    // padding-top: $edge-top;
     // padding-bottom: 8px;
 
     background-color: hsl(0, 0%, 15%);
@@ -444,18 +465,13 @@ $edge-top: 64px;
         overflow: auto;
         width: 100%;
         max-width: 100%;
-        padding: $edge-width;
+        padding: 0px $edge-width;
         padding-bottom: 200px;
-        padding-top: 8px;
-        // display: flex;
-        // flex-direction: column;
-        // align-items: center;
-        // min-height: 0;
+        // padding-top: 0px;
         
-        // & > * {
-        //     min-height: 0;
-        //     flex: 1;
-        // }
+        a {
+            overflow-wrap: break-word;
+        }
 
         .MediaEmbed {
             position: relative;
